Adding bio and console test

--- a/index.html
+++ b/index.html
@@ -5,12 +5,15 @@
 </head>
 
 <body>
-
     <div>
         <h1>Hey, my name's Joe Avila.</h1>
         <p>
-            Welcome to my portfolio site. I'm in the process of rebuilding it from scratch, and hopefully documenting my
+            Welcome to my portfolio site.
+            I'm in the process of rebuilding it from scratch, and hopefully documenting my
             process. Check back for more details later.
+            I'm a web developer based in Seattle, WA.
+            I'm currently working with <a href="https://www.collineargroup.com/">Collinear Group</a> as a full stack
+            software engineer.
         </p>
     </div>
     <script src="./src/index.js" />
