Add links and style sheets

--- a/index.html
+++ b/index.html
@@ -2,6 +2,8 @@
 
 <head>
     <title>Joe Avila | Portfolio</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="./index.css" />
 </head>
 
 <body>
@@ -17,6 +19,10 @@
             I'm currently working with <a href="https://www.collineargroup.com/">Collinear Group</a> as a full stack
             software engineer.
         </p>
+        <footer>
+            <a href="./index.html">Home</a>
+            <a href="./src/blog/index.html">Blog</a>
+        </footer>
     </div>
     <script src="./src/index.js" />
 </body>
