Update styling and add picture

--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
 </head>
 
 <body>
-    <div>
+    <img src="src/assets/images/selfie.png" alt="A selfie of me at Rampart Ridge" />
+    <div id="bio">
         <h1>Hey, my name's Joe Avila.</h1>
         <p>
             Welcome to my portfolio site.
