Update index page style Add class names to footer Add typography css file

--- a/index.html
+++ b/index.html
@@ -3,10 +3,11 @@
 <head>
     <title>Joe Avila | Portfolio</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="./typography.css" />
     <link rel="stylesheet" href="./index.css" />
 </head>
 
-<body>
+<body class="preload">
     <img src="src/assets/images/selfie.png" alt="A selfie of me at Rampart Ridge" />
     <div id="bio">
         <h1>Hey, my name's Joe Avila.</h1>
@@ -21,9 +22,9 @@
             software engineer.
         </p>
         <footer>
-            <a href="./index.html">Home</a>
-            <a href="./src/blog/index.html">Blog</a>
+            <a href="./index.html" class="text_small">Home</a>
+            <a href="./src/blog/index.html" class="text_small">Blog</a>
         </footer>
     </div>
-    <script src="./src/index.js" />
+    <script src="./src/index.js"></script>
 </body>
