--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
 <!DOCTYPE html>
+<html lang="en">
 
 <head>
     <title>Joe Avila | Portfolio</title>
@@ -28,3 +29,5 @@
     </div>
     <script src="./src/index.js"></script>
 </body>
+
+</html>
