--- a/src/index.html
+++ b/src/index.html
@@ -51,6 +51,10 @@
                 Languages I am excited about (but haven't worked with yet)
                 are <em>Svelte and Golang</em>.
             </p>
+            <h4>What I bring to the table:</h4>
+            <p>
+                A great attitude.
+            </p>
         </section>
     </div>
     <script src="bundle.js"></script>
