--- a/src/index.html
+++ b/src/index.html
@@ -34,7 +34,7 @@
             <h1>Hey, my name's Joe Avila.</h1>
             <p>
                 I'm a web developer based in Seattle, WA.
-                While <em>React, Typescript | Javascript, HTML, and CSS</em> are my bread
+                While <em>React, Typescript/Javascript, HTML, and CSS</em> are my bread
                 and butter, I'm not afraid to quick to ask questions or learn new skills.
                 You can see my previous work experience on my <a
                     href="https://www.notion.so/Joseph-Avila-15456ff3b032457aa7e972058dc9f93b"
