Update bio section

--- a/src/index.html
+++ b/src/index.html
@@ -32,24 +32,28 @@
     <div class="bio right">
         <section>
             <h1>Hey, my name's Joe Avila.</h1>
-            <p>
+            <h4>
                 I'm a web developer based in Seattle, WA.
                 While <em>React, Typescript/Javascript, HTML, and CSS</em> are my bread
                 and butter, I'm not afraid to quick to ask questions or learn new skills.
                 You can see my previous work experience on my <a
                     href="https://www.notion.so/Joseph-Avila-15456ff3b032457aa7e972058dc9f93b"
                     target="_blank">resume</a>.
-            </p>
-
-            <h2>I'm looking for work!</h2>
-            <h4>What I'm looking for: </h4>
+            </h4>
+            <h5>I'm looking for work!</h5>
             <p>
                 My ideal role would be on a team of developers maintaining and adding new features to an app in
                 production.
-                The front end is where I will be able to contribute most, but my dream job will allow me to work on an
-                API.
-                Languages I am excited about (but haven't worked with yet)
-                are <em>Svelte and Golang</em>.
+                The front end is where I'll be able to contribute initially. But I'm eager to continue honing my
+                experience
+                working with API's, especially those built in <em>Node</em> and/or <em>GraphQL</em>.
+            </p>
+            <h5>What I bring to the table:</h5>
+            <p>
+                I'm a team player with great communication! My active listening skill relates to my ability
+                to pick up new technical skills quickly.
+                The decade I spent in the service industry trained me not to personalize feedback. I have a positive
+                attitude that I carry with me into daily meetings, and paired programming sessions.
             </p>
         </section>
     </div>
