Add resume locally

--- a/src/index.html
+++ b/src/index.html
@@ -41,7 +41,7 @@
                 While <em>React, Typescript/Javascript, HTML, and CSS</em> are my bread
                 and butter, I'm not afraid to quick to ask questions or learn new skills.
                 You can see my previous work experience on my <a
-                    href="https://www.notion.so/Joseph-Avila-15456ff3b032457aa7e972058dc9f93b"
+                    href="assets/resume.pdf"
                     target="_blank">resume</a>.
             </h4>
             <h5>I'm looking for work!</h5>
