Initial gatsby commit

--- a/src1/index.html
+++ b/src1/index.html
@@ -7,6 +7,7 @@
 </head>
 
 <body class="main" role="main">
+    <nav></nav>
     <div class="left">
         <img sizes="(min-width: 30em) 30em, 100vw"
             srcset="https://res.cloudinary.com/deijyaaid/image/upload/f_auto,c_scale,q_auto,r_30,w_150/v1614190409/donut_selfie.png 256w, 
@@ -38,8 +39,8 @@
             <h3>Hey, my name's Joe Avila.</h3>
             <h4>
                 I'm a web developer based in Seattle, WA.
-                While <em>React, Typescript/Javascript, HTML, and CSS</em> are my bread
-                and butter, I'm not afraid to quick to ask questions or learn new skills.
+                While <em>React and Typescript/JS</em> are my bread
+                and butter, I'm quick to ask questions and learn new skills.
                 You can see my previous work experience on my <a
                     href="assets/resume.pdf"
                     target="_blank">resume</a>.
@@ -50,7 +51,7 @@
                 production.
                 The front end is where I'll be able to contribute initially. But I'm eager to continue honing my
                 experience
-                working with API's, especially those built in <em>Node</em> and/or <em>GraphQL</em>.
+                working on API's, especially those built in <em>Node</em> and/or <em>GraphQL</em>.
             </p>
             <h5>What I bring to the table:</h5>
             <p>
